# site_pneumoslon

./: .env  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_album.py  0003_concert_meeting.py  0005_album.py  0006_song.py
core/static/core/css/: style.css
core/templates/core/: index.html
site_pneumoslon/: settings.py  urls.py
site_pneumoslon/core/: models.py  views.py
site_pneumoslon/core/migrations/: 0002_remove_concert_meeting.py  0004_alter_concert_meeting.py  0007_album_age_limit.py  0008_remove_album_age_limit.py
site_pneumoslon/site_pneumoslon/: asgi.py  settings.py  wsgi.py
