[tool.poetry]
name = "pneumoslon"
version = "0.1.0"
description = ""
authors = ["Aleksey Goryansky <aleksejgoryansky@yandex.ru>"]
readme = "README.md"
packages = [{ include = "pneumoslon" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
python-dotenv = "^1.1.0"
pillow = "^11.2.1"
psycopg = { extras = ["binary"], version = "^3.1.10" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"